--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,15 @@
                         </p>
                         <br>
                         <p class="lead mb-0">
-                            This tool then trains a Gaussian Process model and interpolates the outcome for each row with missing data. It returns a CSV with the interpolated value (i.e., the mean of the predictive distribution) as well as the standard deviation. The final optimized lengthscale parameter is added to the filename of the returned CSV. 
+                            This tool then trains a Gaussian Process model and interpolates the outcome for each row with missing data. It returns a CSV with the interpolated value (i.e., the mean of the predictive distribution) as well as the standard deviation. 
+                        </p>
+                        <br>
+                        <p class="lead mb-0">
+                            The final optimized lengthscale parameter is added to the filename of the returned CSV. For example, a returned file named interpolations_ls3.296.csv means that the final lengthscale was 3.296.
+                        </p>
+                        <br>
+                        <p class="lead mb-0">
+                            An overview of the full technical details can be found <a href="https://github.com/sjgiorgi/county-interpolation.wwbp.org"  style="color:black;">here</a>.
                         </p>
                     </div>
                 </div>
