--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,10 @@
                   <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#about">About</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="https://github.com/sjgiorgi/county-interpolation.wwbp.org#frequently-asked-questions-faq">FAQ</a>
+                  </li>
+                  
       
                 </ul>
               </div>
