updates with paper

--- a/templates/index.html
+++ b/templates/index.html
@@ -185,21 +185,26 @@
                             <div class="tab-content">
                                 <div id="bib-contents" class="tab-pane active">
 
-                                    <pre>@inproceedings{giorgi2022interpolation,
-        title={County Interpolation },
-        author={Giorgi, Salvatore and Eichstaedt, Johannes C and Gardner, Jacob R and Schwartz, H Andrew  and Ungar, Lyle},
-        url={county-interpolation.wwbp.org},
+                                    <pre>@article{giorgi2023filling,
+  title={Filling in the white space: Spatial interpolation with Gaussian processes and social media data},
+  author={Giorgi, Salvatore and Eichstaedt, Johannes C and Preo{\c{t}}iuc-Pietro, Daniel and Gardner, Jacob R and Schwartz, H Andrew and Ungar, Lyle H},
+  journal={Current research in ecological and social psychology},
+  volume={5},
+  pages={100159},
+  year={2023},
+  publisher={Elsevier}
 }
+
 </pre>
                                 </div>
                                 <div id="apa-contents" class="tab-pane">
 
-                                    <pre>Giorgi, S., Eichstaedt, J.C., Gardner, J.R., Schwartz, H.A., & Ungar, L. (2022). County Interpolation with Gaussian Processes. Retrieved from http://county-interpolation.wwbp.org.
+                                    <pre>Giorgi, S., Eichstaedt, J. C., Preoţiuc-Pietro, D., Gardner, J. R., Schwartz, H. A., & Ungar, L. H. (2023). Filling in the white space: Spatial interpolation with Gaussian processes and social media data. Current research in ecological and social psychology, 5, 100159.
 
                                     </pre>
                                 </div>
                                 <div id="mla-contents" class="tab-pane">
-                                    <pre>Giorgi, S., Eichstaedt, J.C., Gardner, J.R., Schwartz, H.A., & Ungar, L. (2022). County Interpolation with Gaussian Processes. Retrieved from http://county-interpolation.wwbp.org.
+                                    <pre>Giorgi, Salvatore, et al. "Filling in the white space: Spatial interpolation with Gaussian processes and social media data." Current research in ecological and social psychology 5 (2023): 100159.
 
                                     </pre>
                                 </div>
