--- a/templates/index.html
+++ b/templates/index.html
@@ -148,8 +148,8 @@
                             <li>This tool presents principled methods to interpolate spatial data using formal Bayesian models, namely Gaussian Processes.</li>
                             <li>Powered by <a href="https://gpytorch.ai/" style="color:black;">GPytorch</a>, a highly efficient and modular implementation of Gaussian Processes.</li>
                             <li>Using a modern machine learning framework, the GP hyperparameters are learned from the training data, as opposed to chosen a priori.</li>
-                            <li>Full technical details are available <a href="https://github.com/sjgiorgi/county-interpolation.wwbp.org" style="color:black;">here</a> or you can read our paper <a href="" style="color:black;">here</a>.</li>
-                            <li>Try interpolating U.S. county Agreeableness with this <a href="{{url_for('.static', filename='example_data.csv')}}" style="color:black;">sample data</a>. Note, this data does not work with the Twitter language features.</li>
+                            <li>Full technical details are available <a href="https://github.com/sjgiorgi/county-interpolation.wwbp.org" style="color:black;">here</a> or you can read our paper <a href="https://doi.org/10.1016/j.cresp.2023.100159" style="color:black;">here</a>.</li>
+                            <li>Try interpolating U.S. county Agreeableness with this <a href="{{url_for('.static', filename='example_data.csv')}}" style="color:black;">sample data</a>. Note, this data does not work with the Twitter language features, since this agreeablness measure is built from the same Twitter language features.</li>
                         </ul>
                     </div>
                     <!-- <div class="col-lg-4">
